--- a/app/src/main/res/layout/next_page.xml
+++ b/app/src/main/res/layout/next_page.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:padding="16dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    >
 
   <TextView
       android:id="@+id/textView2"
@@ -14,16 +15,18 @@
       android:layout_height="wrap_content"
       android:text="welcome to our new page"
       android:textSize="30sp"
-      android:layout_centerInParent="true"/>
+      android:layout_gravity="center"
+      android:layout_marginBottom="16dp"
+      />
 
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView2"
-        android:layout_centerInParent="true"
-        android:text="back"
-        android:textSize="20sp"/>
+  <Button
+      android:id="@+id/button2"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_below="@+id/textView2"
+      android:layout_gravity="center"
+      android:text="back"
+      android:textSize="20sp" />
 
 
-</RelativeLayout>
+</LinearLayout>
